fix: poor perf on Safari

--- a/src/components/Paper/index.module.css
+++ b/src/components/Paper/index.module.css
@@ -17,6 +17,7 @@
   filter: url(#paper) invert(0);
   mix-blend-mode: luminosity;
   opacity: 0.75;
+  transform: translateZ(0);
 }
 
 .noise {
@@ -26,8 +27,9 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-    filter: url(#noise) grayscale(1);
+  filter: url(#noise) grayscale(1);
   mix-blend-mode: screen;
+  transform: translateZ(0);
 }
 
 @media (prefers-color-scheme: dark) {
